# china_composition_service

./: .gitignore  service_name  url.txt
src/: CMakeLists.txt  Dockerfile  apollo_conf.h  app.cpp  app.h  image_interface.cpp  image_interface.h  image_operation.cpp  image_operation.h  init_server.cpp  service_error.h  service_main.cpp  tal_interface.cpp  tal_interface.h  test  test.yaml  threadpool.hpp  url_request.cpp  url_request.hpp
src/ai_model/: composion.cpp  composion.hpp
src/ai_model/include/: det_chn_comp.hpp  det_chn_yolov5.hpp  rec_chn_comp.hpp
src/ai_model/lib/: libdet_chn_comp.so.700.100.1.0.0.1  libdet_timu_yolov5.so.700.100.1.4.0  libnvonnxparser.so.7  performance_testing_GPU
src/ai_model/model/det_chn_comp/: config.ini  det_demo  performance_run_gpu.sh  performance_testing_GPU
src/ai_model/model/det_chn_comp/test/: performance_testing.cpp
src/ai_model/model/det_chn_yolov5/: config.ini  performance_run_gpu.sh  performance_testing_GPU  version.md
src/ai_model/model/det_chn_yolov5/test/: performance_testing.cpp
src/ai_model/model/rec_chn_comp/: config.ini  performance_run_gpu.sh  performance_testing_GPU  version.md  zidian_new_5883.txt  zt_dict.txt
src/ai_model/model/rec_chn_comp/test/: makefile  performance_testing.cpp
src/base/: cmake_install.cmake
src/breakpad/: Makefile  cmake_install.cmake
src/common/: base_error.h  file_download.cpp  mysql_conn_pool.cpp  mysql_conn_pool.h
test_tools/: microservice_test.py
